--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@ h4 {
 
   <div class="container-fluid">
    <div class="row text-center">
+     <div class="col-xs-12">
       <img alt="J and E Kapas Photography Logo" class="img jeklogo img-responsive" src="http://res.cloudinary.com/kevin-borah/image/upload/v1480976921/Logo_Website_Header_u4qigf.png">
+     </div>
    </div>
    <div class="row">
       <div class="col-md-offset-4 col-md-4 text-right">
