--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@ h4 {
 
   <div class="container-fluid">
    <div class="row text-center">
-     <div class="col-xs-12">
       <img alt="J and E Kapas Photography Logo" class="img jeklogo img-responsive" src="http://res.cloudinary.com/kevin-borah/image/upload/v1480976921/Logo_Website_Header_u4qigf.png">
-     </div>
    </div>
    <div class="row">
-      <div class="col-md-offset-4 col-md-4 text-right">
+     <div class="col-md-4">
+     </div>
+      <div class="col-md-4 text-right">
          <form>
             <input type="text" class="form-control" placeholder="Please enter your file number" id="file">
             <button style="margin-top: 10px" type="button" class="btn btn-primary" id="enter">Enter</button>
