--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ h4 {
       </div>
    </div>
    <div class="row footer" id="footer">
-      <div class="col-xs-4">
+      <div class="col-md-4">
          <h4 class="text-center">For problems with your photo click <button type="button" class="btn btn-link btn-lg" id="help">Here</button></h4>
       </div>
-      <div class="col-xs-4">
+      <div class="col-md-4">
          <h4 class="text-center">J and E Kapas Photography 2016</h4>
       </div>
-      <div class="col-xs-4">
+      <div class="col-md-4">
          <h4 class="text-center">For Higher Resolution Photos or Print Releases email jeff.kapas@gmail.com</h4>
       </div>
    </div>
