--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ h4 {
       
    </div>
    <div class="row">
-      <div class="col-md-12 text-center" id="photo">
+      <div id="photo">
                   
       </div>
    </div>
