--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ h4 {
       <img alt="J and E Kapas Photography Logo" class="img jeklogo img-responsive" src="http://res.cloudinary.com/kevin-borah/image/upload/v1480976921/Logo_Website_Header_u4qigf.png">
    </div>
    <div class="row">
-     <div class="col-md-4">
+     <div class="col-xs-4">
      </div>
-      <div class="col-md-4 text-right">
+      <div class="col-xs-4 text-right">
          <form>
             <input type="text" class="form-control" placeholder="Please enter your file number" id="file">
             <button style="margin-top: 10px" type="button" class="btn btn-primary" id="enter">Enter</button>
@@ -64,7 +64,7 @@ h4 {
       
    </div>
    <div class="row">
-      <div class="col-md-12" id="photo">
+      <div class="col-xs-12" id="photo">
                   
       </div>
    </div>
