--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ h4 {
       
    </div>
    <div class="row">
-      <div class="col-md-offset-4 col-md-4" id="photo">
+      <div class="col-xs-offset-4 col-xs-4" id="photo">
                   
       </div>
    </div>
