--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@ h4 {
   <div class="container-fluid">
    <div class="row text-center">
      <div class="col-xs-12">
-      <img alt="J and E Kapas Photography Logo" class="img jeklogo " src="http://res.cloudinary.com/kevin-borah/image/upload/v1480976921/Logo_Website_Header_u4qigf.png">
+      <img alt="J and E Kapas Photography Logo" class="img jeklogo img-responsive" src="http://res.cloudinary.com/kevin-borah/image/upload/v1480976921/Logo_Website_Header_u4qigf.png">
      </div>
    </div>
    <div class="row">
-     <div class="col-xs-4">
+     <div class="col-xs-">
      </div>
-      <div class="col-xs-4 text-right">
+      <div class="col-xs-12 text-right">
          <form>
             <input type="text" class="form-control" placeholder="Please enter your file number" id="file">
             <button style="margin-top: 10px" type="button" class="btn btn-primary" id="enter">Enter</button>
@@ -78,7 +78,7 @@ h4 {
          <h4 class="text-center">J and E Kapas Photography 2016</h4>
       </div>
       <div class="col-md-4">
-         <h4 class="text-center">For Higher Resolution Photos or Print Releases email jeff.kapas@gmail.com</h4>
+         <h4 class="text-center">For Higher Resolution Photos or Print<br>Releases email jeff.kapas@gmail.com</h4>
       </div>
    </div>
 </div>
