--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ h4 {
 
   <div class="container-fluid">
    <div class="row text-center">
-     <div class="col-xs-12">
+     <div class="col-md-offset-4 col-md-4">
       <img alt="J and E Kapas Photography Logo" class="img jeklogo img-responsive" src="http://res.cloudinary.com/kevin-borah/image/upload/v1481068014/Logo_hgurcx.png">
      </div>
    </div>
