--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ h4 {
      </div>
    </div>
    <div class="row">
-     <div class="col-xs-4">
+     <div class="col-md-4">
      </div>
-      <div class="col-xs-4 text-right">
+      <div class="col-md-4 text-right">
          <form>
             <input type="text" class="form-control" placeholder="Please enter your file number" id="file">
             <button style="margin-top: 10px" type="button" class="btn btn-primary" id="enter">Enter</button>
@@ -66,7 +66,7 @@ h4 {
       
    </div>
    <div class="row">
-      <div class="col-xs-offset-3 col-xs-6" id="photo">
+      <div class="col-md-6" id="photo">
                   
       </div>
    </div>
