--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ h4 {
       
    </div>
    <div class="row">
-      <div class="col-md-6" id="photo">
+      <div class="col-md-offset-3 col-md-6" id="photo">
                   
       </div>
    </div>
