--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@ h4 {
    </div>
    <div class="row footer" id="footer">
       <div class="col-md-4">
-         <h4 class="text-center">For problems with your photo click <button type="button" class="btn btn-link btn-lg" id="help">Here</button></h4>
+         <h3 class="text-center">For problems with your photo click <button type="button" class="btn btn-link btn-xl" id="help">Here</button></h3>
       </div>
       <div class="col-md-4">
-         <h4 class="text-center">J and E Kapas Photography 2016</h4>
+         <h3 class="text-center">J and E Kapas Photography 2016</h3>
       </div>
       <div class="col-md-4">
-         <h4 class="text-center">For Higher Resolution Photos or Print<br>Releases email jeff.kapas@gmail.com</h4>
+         <h3 class="text-center">For Higher Resolution Photos or Print<br>Releases email jeff.kapas@gmail.com</h3>
       </div>
    </div>
 </div>
