--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ h3 {
      </div>
       <div class="col-md-4 text-right">
          <form>
+           <label>File Number:</label>
             <input type="text" class="form-control" placeholder="Please enter your file number" id="file">
             <button style="margin-top: 10px" type="button" class="btn btn-primary" id="enter">Enter</button>
          </form>
