--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ h3 {
      </div>
       <div class="col-md-4 text-right">
          <form>
-           <label style="color: #FFFFFF" class="text-left">File Number:</label>
+           <label align="left" class="text-left">File Number:</label>
             <input type="text" class="form-control" placeholder="Please enter your file number" id="file">
             <button style="margin-top: 10px" type="button" class="btn btn-primary" id="enter">Enter</button>
          </form>
