--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@ h3 {
    <div class="row">
      <div class="col-md-4">
      </div>
-      <div class="col-md-4 text-right">
+      <div class="col-xs-4 text-right">
          <form>
-           <label align="left" class="text-left">File Number:</label>
             <input type="text" class="form-control" placeholder="Please enter your file number" id="file">
             <button style="margin-top: 10px" type="button" class="btn btn-primary" id="enter">Enter</button>
          </form>
