--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ h3 {
          <h3 class="text-center">J and E Kapas Photography 2016</h3>
       </div>
       <div class="col-md-4">
-         <h3 class="text-center">For Higher Resolution Photos or Print<br>Releases email jeff.kapas@gmail.com</h3>
+         <h3 class="text-center">For Higher Resolution Photos or Print<br>Releases email jandekapasphotography@gmail.com</h3>
       </div>
    </div>
 </div>
@@ -93,7 +93,7 @@ $("#enter").on("click", function() {
    console.log(file);
 });
 $("#help").on("click", function() {
-   alert("Refresh the page.\nMake sure you entered the correct file number.\nIf problems persist please email jeff.kapas@gmail.com.");
+   alert("Refresh the page.\nMake sure you entered the correct file number.\nIf problems persist please email jandekapasphotography@gmail.com.");
 });
 $("#file").keypress(function(event) {
       return event.keyCode != 13;
