--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ h4 {
     var file = "";
 $("#enter").on("click", function() {
    file = $("#file").val();
-   $("#photo").html('<img class="img img-responsive photo" alt="Here\'s Your Polar Express Photo. Merry Christmas" src="https://s3.amazonaws.com/jeffkapas/Chick-Fil-A/' + file + '.jpg">')
+   $("#photo").html('<img class="img img-responsive photo" alt="Here\'s Your Polar Express Photo. Merry Christmas" src="https://s3.amazonaws.com/jeffkapas1/Chick-Fil-A/ + file + '.jpg">')
    console.log(file);
 });
 $("#help").on("click", function() {
