--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ h4 {
          <h4 class="text-center">J and E Kapas Photography 2016</h4>
       </div>
       <div class="col-md-4">
-         <h4 class="text-center">For Higher Resolution Photos or Print<br>Releases email jandekapasphotography@gmail.com</h4>
+         <h4 class="text-center">To have your photo printed you will need a copy of our print release available  <a href="https://www.dropbox.com/scl/fi/59ur41vswz2imfw5i7o00?oref=e&r=AARsJNKf6JcEfSvdANyEa65p6soNy0wvoabY8kieaI0AKEKDZ8iqq1Z7oz6OgomIJ81Ua-rdc1xtCuKVuMWTzQlXvD2jxwD51nkP0eBLdItiswaMB0rI88Ma_aD58Gs_CJZCiB9sO-tO6h6Hg5hh4zm3m7n4F7W3L63GID1ix9rccQ&sm=1" target="blank">Here. </a></h4>
       </div>
    </div>
 </div>
