--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ h4 {
      </div>
       <div class="col-md-4 text-right">
          <form>
-            <input type="text" class="form-control" placeholder="Please enter your file number" id="file">
+            <input type="text" class="form-control" placeholder="Please enter your file #" id="file">
             <button style="margin-top: 10px" type="button" class="btn btn-primary" id="enter">Enter</button>
          </form>
       </div>
